--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <hr \>
    
     <img src="https://lh5.googleusercontent.com/proxy/VOcFeiwjYU-0_aVx2-v2ZCV5p_JXa-r1PeDklTeHKbixSnaJj4Ir01nAHtiIVVPNXvFg1HtDnFYyFj3JTg9B7f-hYXI0XsUGAS35oAA2xquqJ5W_0w" width="1500" height="300">
-    <h3><a href="./public/movie-ranking.html">Movie Ranking Project Link:</a></h3> 
+    <h3><a href=".movie-ranking.html">Movie Ranking Project Link:</a></h3> 
     <br/>
- <h3><a href="./public/birthday-invite.html">Birthday-Invite project Link:</a></h3>
+ <h3><a href=".birthday-invite.html">Birthday-Invite project Link:</a></h3>
  <br/>
- <img src="./assets/images/Screenshot 2024-12-31 214002.png">
+ <img src=".images/Screenshot 2024-12-31 214002.png">
  <br/>
  <hr />
  <h3>Hi everyone , this is all my simple projects</h3>
