--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <br/>
  <h3><a href=".birthday-invite.html">Birthday-Invite project Link:</a></h3>
  <br/>
- <img src=".images/Screenshot 2024-12-31 214002.png">
+ <img src=".Screenshot 2024-12-31 214002.png">
  <br/>
  <hr />
  <h3>Hi everyone , this is all my simple projects</h3>
