--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
  <h3>you can check all of them </h3>
  <br/>
- <a href="./public/about.html">About me link:</a>
+ <a href=".about.html">About me link:</a>
  <br/>
- <a href="./public/contact.html">contact me link:</a>
+ <a href=".contact.html">contact me link:</a>
  <h1>Thank You</h1>
  </body>
  </html>
